[package]
name = "brk_rolldown_ecmascript"
version.workspace = true
publish = true
description = "ECMAScript AST and parsing utilities for Rolldown"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
oxc = { workspace = true }
oxc_sourcemap = { workspace = true }
rolldown_error = { workspace = true }
self_cell = { workspace = true }
