[package]
name = "brk_rolldown_filter_analyzer"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Analyzer for filter patterns in Rolldown"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc = { workspace = true }
rolldown_ecmascript = { workspace = true }
