[package]
name = "brk_rolldown_fs"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Filesystem abstraction layer for Rolldown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[features]
memory = []
os = []

[dependencies]
oxc_resolver = { workspace = true }
vfs = { workspace = true }
