[package]
name = "brk_rolldown_plugin_chunk_import_map"
version.workspace = true
edition.workspace = true
license = "MIT"
publish = true
description = "Rolldown plugin for chunk import mapping"

[lib]
doctest = false

[dependencies]
arcstr = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
