[package]
name = "brk_rolldown_plugin_data_uri"
version.workspace = true
edition.workspace = true
license = "MIT"
publish = true
description = "Rolldown plugin for data URI handling"

[lib]
doctest = false

[dependencies]
arcstr = { workspace = true }
base64-simd = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
simdutf8 = { workspace = true }
urlencoding = { workspace = true }
