[package]
name = "brk_rolldown_plugin_esm_external_require"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Rolldown plugin for ESM external require handling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
nodejs-built-in-modules = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
