[package]
name = "brk_rolldown_plugin_hmr"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Rolldown plugin for Hot Module Replacement (HMR)"

[dependencies]
arcstr = { workspace = true }
oxc = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }

[lints]
workspace = true
