[package]
name = "brk_rolldown_plugin_lazy_compilation"
description = "brk version of rolldown_plugin_lazy_compilation"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arcstr = { workspace = true }
oxc = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
