[package]
name = "brk_rolldown_plugin_oxc_runtime"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Rolldown plugin for OXC runtime helpers"

[lib]
doctest = false

[dependencies]
arcstr = { workspace = true }
phf = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
