[package]
name = "brk_rolldown_plugin_vite_alias"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for module path aliasing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
cow-utils = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
