[package]
name = "brk_rolldown_plugin_vite_css_post"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Rolldown plugin for Vite CSS post-processing"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
base64-simd = { workspace = true }
cow-utils = { workspace = true }
derive_more = { workspace = true }
regex = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_plugin_utils = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
string_wizard = { workspace = true }
sugar_path = { workspace = true }
