[package]
name = "brk_rolldown_plugin_vite_html"
description = "brk fork of rolldown_plugin_vite_html"
version.workspace = true
edition = "2021"
license = "MIT"
publish = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
cow-utils = { workspace = true }
derive_more = { workspace = true }
html5gum = { workspace = true }
itoa = { workspace = true }
oxc = { workspace = true }
regex = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_plugin_utils = { workspace = true }
rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
string_cache = { workspace = true }
string_wizard = { workspace = true }
sugar_path = { workspace = true }
