[package]
name = "brk_rolldown_plugin_vite_html_inline_proxy"
description = "brk fork of rolldown_plugin_html_inline_proxy"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_plugin_utils = { workspace = true }
rolldown_utils = { workspace = true }
sugar_path = { workspace = true }
