[package]
name = "brk_rolldown_plugin_vite_load_fallback"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for load fallback handling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
memchr = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils = { workspace = true }
