[package]
name = "brk_rolldown_plugin_vite_module_preload_polyfill"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for module preload polyfill"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
