[package]
name = "brk_rolldown_plugin_vite_react_refresh_wrapper"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for React Refresh wrapper"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
arcstr = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_plugin_utils = { workspace = true }
rolldown_utils = { workspace = true }
