[package]
name = "brk_rolldown_plugin_vite_wasm_helper"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Rolldown plugin for WebAssembly helper generation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
derive_more = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_plugin_utils = { workspace = true }
