[package]
name = "brk_rolldown_std_utils"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Standard library utilities for Rolldown"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
