[package]
name = "brk_generator"
description = "brk fork of generator"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
cow-utils = { workspace = true }
heck = { workspace = true }
oxc = { workspace = true }
oxc_resolver = { workspace = true }
regex = { workspace = true }
rolldown_workspace = { workspace = true }

prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "clone-impls",
  "derive",
  "extra-traits",
  "full",
  "parsing",
  "printing",
  "proc-macro",
] }
[lints]
workspace = true
