[package]
name = "brk_ls-lint"
description = "brk fork of lint"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
globset = "0.4"
heck = { workspace = true }
ignore = "0.4"
rolldown_workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
